--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,297 @@
 .App {
   text-align: center;
+  background-color: white;
+}
+.container {
+  background-color: white;
+}
+.search-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+  margin-left: 55px;
+}
+.search-input {
+  padding: 10px;
+  border: 1px solid #000000;
+  border-radius: 18px;
+  width: 200px;
+  height: 18px;
+  font-size: 16px;
+}
+.ButtonUI {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(
+    100% 100% at 100% 0,
+    #5adaff 0,
+    #5468ff 100%
+  );
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ButtonUI:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ButtonUI:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-5px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ButtonUI:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+.LogoImage {
+  height: 80px;
+  width: 80px;
+  border-radius: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.LogoImageContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 20px;
+  color: black;
+}
+.PeopleCount {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  margin-left: 55px;
+}
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  padding: 50px;
+  gap: 20px;
+}
+
+.card {
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(to right, #a3daff, #eab6ff);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  animation: pulse 1s infinite alternate;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes pulse {
   from {
-    transform: rotate(0deg);
+    transform: scale(1);
   }
   to {
-    transform: rotate(360deg);
+    transform: scale(1.05);
+  }
+}
+
+.card-content {
+  text-align: center;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.card-description {
+  font-size: 1rem;
+  color: #000000;
+  font-weight: bold;
+}
+.shimmer-card {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  padding: 50px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.shimmer-line {
+  height: 100%;
+  width: 50%;
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    #e0e0e0 50%,
+    transparent 100%
+  );
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: shimmer-animation 1s infinite linear;
+}
+
+@keyframes shimmer-animation {
+  0% {
+    left: -10%;
+  }
+  100% {
+    left: 50%;
+  }
+}
+
+/* Responsive Styling */
+@media (max-width: 768px) {
+  .card {
+    width: 150px;
+    height: 150px;
+  }
+
+  .shimmer-card {
+    width: 150px;
+    height: 150px;
+  }
+  .LogoImage {
+    height: 40px;
+    width: 40px;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .LogoImageContainer {
+    font-size: 15px;
+  }
+  .ButtonUI {
+    font-size: 16px;
+    height: 30px;
+    padding-left: 12px;
+    padding-right: 12px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+  .search-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+  }
+  .search-input {
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 15px;
+    height: 10px;
+    width: 120px;
+    font-size: 14px;
+  }
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    margin-top: 5px;
+    padding: 10px;
+  }
+  .PeopleCount {
+    font-size: 18px;
+    margin-left: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .card {
+    width: 50px;
+    height: 50px;
+  }
+
+  .shimmer-card {
+    width: 50px;
+    height: 50px;
+  }
+  .LogoImage {
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .LogoImageContainer {
+    font-size: 10px;
+  }
+  .ButtonUI {
+    font-size: 14px;
+    height: 28px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 10px;
+  }
+  .search-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 18px;
+  }
+  .search-input {
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 12px;
+    height: 5px;
+    width: 120px;
+    font-size: 12px;
+  }
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    margin-top: 5px;
+    padding: 10px;
+  }
+  .PeopleCount {
+    font-size: 15px;
+    margin-left: 20px;
   }
 }
